Removed obsole routes from swagger docs
